Fixed alignment

--- a/boxinator-frontend/src/Dashboard/Orders/OrderList.css
+++ b/boxinator-frontend/src/Dashboard/Orders/OrderList.css
@@ -9,11 +9,10 @@
 .order-item-top {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
     font-size: 20px; 
     font-weight: bold;
-    margin-right: 170px;
-    margin-left: 25px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .order-item-top p{
@@ -30,7 +29,6 @@
 }
 
 .order-item p {
-  margin: 30px;
   flex: 1;
   text-align: center;
 }
